# extension

./: CHANGELOG.md  README.md  cookiecutter.json  pyproject.toml
hello/: hello.py
src/hello/: __init__.py  hello.py
src/{{ cookiecutter.extension_name }}/: extension.py
tests/: test_hello.py  test_{{ cookiecutter.extension_name }}.py
{{cookiecutter.extension_name}}/: README.md  pyproject.toml
{{cookiecutter.extension_name}}/src/{{ cookiecutter.extension_name }}/: __init__.py
{{cookiecutter.project_slug}}/: README.md
